# speller

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build_wheels_linux.yml  build_wheels_windows_latest.yml  validation-rust.yml
data/: es.json  fr.json  it.json  lv.json
speller-py/: Cargo.toml  pyproject.toml
speller-py/src/: lib.rs
speller-rs/: Cargo.toml
speller-rs/benches/: levenshtein.rs  spellcheck.rs
speller-rs/src/: error.rs  lib.rs  source.rs  string.rs
speller-rs/tests/: test.rs
speller-rs/tests/files/: en.csv  en.tsv  en.txt  en_with_header.csv  en_with_index.csv  en_with_index_header.csv
