[package]
name = "speller-py"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "speller_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
speller-rs = { path = "../speller-rs" , features = ["serde_json", "csv"] }
