[package]
name = "speller-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "speller_rs"
path = "src/lib.rs"

[[bin]]
name = "speller_rs"
path = "src/bin/main.rs"

[dependencies]
serde_json = "1.0.114"
lazy_static = "1.4.0"
levenshtein_automata = "0.2.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "spellcheck"
harness = false