[package]
name = "speller-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "speller_rs"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.4.0"
levenshtein_automata = "0.2.1"

[features]
default = ["serde_json"]

[dependencies.serde_json]
version = "1.0.114"
optional = true

[dependencies.csv]
version = "1.1.6"
optional = true

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "spellcheck"
harness = false